--- a/FlowchartEditingWindow.xaml
+++ b/FlowchartEditingWindow.xaml
@@ -5,17 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Flowchart_Editor"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Flowchart Editor" Height="450" Width="800">
     <Grid Background="White">
+
         <Canvas Background="White" 
+               Grid.Column="2"
                 AllowDrop="True" 
                 DragOver="destination_DragOver" 
                 DragLeave="destination_DragLeave" 
                 Drop="destination_Drop" 
-                Name="destination">
-        </Canvas>
+                Name="destination" />
+
+
         <Grid>
             <Grid.RowDefinitions>
+                <RowDefinition Height="75"/>
                 <RowDefinition Height="75"/>
                 <RowDefinition Height="75"/>
                 <RowDefinition Height="75"/>
@@ -29,9 +33,8 @@
                 <ColumnDefinition Width="150"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-          
             
-
+           
 
             <Canvas Width="140" 
                     Height="60"
@@ -44,7 +47,8 @@
                            Canvas.Left="40" 
                            Canvas.Top="18"
                            Width="100">
-                    <TextBlock Text="Действие" TextWrapping="Wrap"/>
+                    <TextBlock Text="Действие"
+                               TextWrapping="Wrap"/>
                 </Label>
             </Canvas>
 
@@ -57,7 +61,7 @@
             <Canvas Name="conditionBlock" MouseMove="conditionBlock_MouseMove" Grid.Row="1">
 
                 <Polygon Fill="#FF60B2D3" 
-                                 Points="55 120 120 90 190 120" 
+                                 Points="55 120.4 120 90 190 120.4" 
                                  Grid.Row="1" 
                                  Canvas.Top="-85" 
                                  Canvas.Left="-50"/>
@@ -110,7 +114,7 @@
                                Grid.Row="2" 
                                VerticalAlignment="Center" 
                                HorizontalAlignment="Left"/>
-            
+
             <Canvas Name="inputOutputBlock"  
                             MouseMove="inputOutputBlock_MouseMove"  
                             Grid.Row="3">
@@ -173,6 +177,35 @@
                                FontSize="10" 
                                Grid.Column="1" 
                                Grid.Row="4" 
+                               VerticalAlignment="Center" 
+                               HorizontalAlignment="Left"/>
+            <TextBlock Text="Цикл (6)" 
+                               FontSize="10" 
+                               Grid.Column="1" 
+                               Grid.Row="5" 
+                               VerticalAlignment="Center" 
+                               HorizontalAlignment="Left"/>
+
+            <Canvas Grid.Row="6" 
+                    Margin="40 0 0 0"
+                    Name="linkBlock"  
+                    MouseMove="linkBlock_MouseMove">
+                <Ellipse Fill="#5761A8"
+                         Width="75" 
+                         Height="75"/>
+                <Label FontSize="12" 
+                               Foreground="White" 
+                               Canvas.Left="13"
+                               Canvas.Top="25">
+                    <TextBlock Text="Ссылка" 
+                               TextWrapping="Wrap"/>
+                </Label>
+            </Canvas>
+
+            <TextBlock Text="Ссылка (7)" 
+                               FontSize="10" 
+                               Grid.Column="1" 
+                               Grid.Row="6" 
                                VerticalAlignment="Center" 
                                HorizontalAlignment="Left"/>
 
