--- a/FlowchartEditingWindow.xaml
+++ b/FlowchartEditingWindow.xaml
@@ -9,13 +9,6 @@
         Title="Flowchart Editor" Height="450" Width="800">
     <Grid Background="White">
 
-        <Canvas Background="White" 
-                AllowDrop="True" 
-                DragOver="destination_DragOver" 
-                DragLeave="destination_DragLeave" 
-                Drop="destination_Drop" 
-                Name="destination" />
-
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="75"/>
@@ -25,6 +18,8 @@
                 <RowDefinition Height="75"/>
                 <RowDefinition Height="75"/>
                 <RowDefinition Height="75"/>
+                <RowDefinition Height="75"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
             <Grid.ColumnDefinitions>
@@ -32,201 +27,210 @@
                 <ColumnDefinition Width="150"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-
+            
+            <Canvas Background="White" 
+                AllowDrop="True" 
+                DragOver="destination_DragOver" 
+                DragLeave="destination_DragLeave" 
+                Drop="destination_Drop" 
+                Name="destination" 
+                Grid.Column="2"
+                Grid.RowSpan="9"/>
+            
             <Canvas Width="140" 
                     Height="60"
                     Background="#FF52C0AA"
                     MouseMove="actionBlock_MouseMove" 
                     Name="actionBlock">
-                <Label FontSize="12" 
+                    <Label FontSize="12" 
                            Foreground="White" 
                            Canvas.Left="40" 
                            Canvas.Top="17"
                            Width="100">
-                    <TextBlock Text="Действие"
+                        <TextBlock Text="Действие"
                                TextWrapping="Wrap"/>
-                </Label>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="65 -3 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="-3 25 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="65 57 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="136 25 0 0"/>
-            </Canvas>
+                    </Label>
+                </Canvas>
 
-            <TextBlock Text="Блок (1)" 
+                <TextBlock Text="Блок (1)" 
                        FontSize="10" 
                        VerticalAlignment="Center" 
                        HorizontalAlignment="Left"
                        Grid.Column="1" />
 
-            <Canvas Name="conditionBlock" MouseMove="conditionBlock_MouseMove" Grid.Row="1">
+                <Canvas Name="conditionBlock" MouseMove="conditionBlock_MouseMove" Grid.Row="1">
 
-                <Polygon Fill="#FF60B2D3" 
+                    <Polygon Fill="#FF60B2D3" 
                                  Points="55 120.4 120 90 190 120.4" 
                                  Grid.Row="1" 
                                  Canvas.Top="-85" 
                                  Canvas.Left="-50"/>
 
-                <Polygon Fill="#FF60B2D3" 
+                    <Polygon Fill="#FF60B2D3" 
                                  Points="190 120 55 120 120 150" 
                                  Grid.Row="1" 
                                  Canvas.Top="-85" 
                                  Canvas.Left="-50"/>
 
-                <Label   FontSize="12" 
+                    <Label   FontSize="12" 
                                  Foreground="White" 
                                  Canvas.Left="43" 
                                  Canvas.Top="22"
                                  Width="100">
-                    <TextBlock Text="Условие" TextWrapping="Wrap"/>
-                </Label>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="68 1 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="3 32 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="67 62 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="135 32 0 0"/>
-            </Canvas>
+                        <TextBlock Text="Условие" TextWrapping="Wrap"/>
+                    </Label>
+                </Canvas>
 
-            <TextBlock Text="Условие (2)" 
+                <TextBlock Text="Условие (2)" 
                                FontSize="10" 
                                VerticalAlignment="Center" 
                                HorizontalAlignment="Left"
                                Grid.Column="1" 
                                Grid.Row="1"/>
 
-            <Canvas Name="startEndBlock"  
+                <Canvas Name="startEndBlock"  
                             MouseMove="startEndBlock_MouseMove"  
                             Grid.Row="2">
 
-                <Rectangle Width="140" 
+                    <Rectangle Width="140" 
                                Height="60" 
                                Fill="#FFF25252" 
                                RadiusX="25" 
                                RadiusY="25" 
                                Grid.Row="2" 
                                Canvas.Top="10">
-                </Rectangle>
-                <Label FontSize="12" 
+                    </Rectangle>
+                    <Label FontSize="12" 
                                Foreground="White" 
                                Canvas.Left="30" 
                                Canvas.Top="28">
-                    <TextBlock Text="Начало/Конец" TextWrapping="Wrap"/>
-                </Label>
-                
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="65 7 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="-4 35 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="65 66 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="137 35 0 0"/>
-            </Canvas>
+                        <TextBlock Text="Начало/Конец" TextWrapping="Wrap"/>
+                    </Label>
+                </Canvas>
 
-            <TextBlock Text="Начало / Конец (3)" 
+                <TextBlock Text="Начало / Конец (3)" 
                                FontSize="10" 
                                Grid.Column="1" 
                                Grid.Row="2" 
                                VerticalAlignment="Center" 
                                HorizontalAlignment="Left"/>
 
-            <Canvas Name="inputOutputBlock"  
+                <Canvas Name="inputOutputBlock"  
                             MouseMove="inputOutputBlock_MouseMove"  
                             Grid.Row="3">
-                <Rectangle Width="102" 
+                    <Rectangle Width="102" 
                                    Height="30" 
                                    Fill="#FF05273C" 
                                    Canvas.Top="11" 
                                    Canvas.Left="5">
-                    <Rectangle.RenderTransform>
-                        <MatrixTransform Matrix="1 0 1 2 1 -3"/>
-                    </Rectangle.RenderTransform>
-                </Rectangle>
+                        <Rectangle.RenderTransform>
+                            <MatrixTransform Matrix="1 0 1 2 1 -3"/>
+                        </Rectangle.RenderTransform>
+                    </Rectangle>
 
-                <Label FontSize="12" 
+                    <Label FontSize="12" 
                                Foreground="White" 
                                Canvas.Left="37" 
                                Canvas.Top="25">
-                    <TextBlock Text="Ввод/Вывод" TextWrapping="Wrap"/>
-                </Label>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="60 5 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="18 35 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="80 66 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="120 35 0 0"/>
-            </Canvas>
+                        <TextBlock Text="Ввод/Вывод" TextWrapping="Wrap"/>
+                    </Label>
+                </Canvas>
 
-            <TextBlock Text="Ввод / Вывод (4)" 
+                <TextBlock Text="Ввод / Вывод (4)" 
                                FontSize="10" 
                                Grid.Column="1" 
                                Grid.Row="3" 
                                VerticalAlignment="Center" 
                                HorizontalAlignment="Left"/>
 
-            <Canvas Width="140" 
+                <Canvas Width="140" 
                             Height="60"
                             Background="#FFBA64C8"
                             Grid.Row="4" 
                             Name="subroutineBlock"  
                             MouseMove="subroutineBlock_MouseMove">
-                <Border BorderBrush="Black" 
+                    <Border BorderBrush="Black" 
                                 Height="60" 
                                 Width="140" 
                                 BorderThickness="1" 
                                 CornerRadius="1">
-                    <Canvas>
-                        <Border BorderBrush="Black" 
+                        <Canvas>
+                            <Border BorderBrush="Black" 
                                         Height="60" 
                                         Width="100" 
                                         BorderThickness="1" 
                                         CornerRadius="1" 
                                         Canvas.Left="20" 
                                         Canvas.Top="-1">
-                        </Border>
-                    </Canvas>
-                </Border>
-                <Label FontSize="12" 
+                            </Border>
+                        </Canvas>
+                    </Border>
+                    <Label FontSize="12" 
                                Foreground="White" 
                                Canvas.Left="28"
                                Canvas.Top="17">
-                    <TextBlock Text="Подпрограмма" TextWrapping="Wrap"/>
-                </Label>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="65 -3 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="-3 27 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="65 57 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="136 27 0 0"/>
-            </Canvas>
+                        <TextBlock Text="Подпрограмма" TextWrapping="Wrap"/>
+                    </Label>
+                </Canvas>
 
-            <TextBlock Text="Подпрограмма (5)" 
+                <TextBlock Text="Подпрограмма (5)" 
                                FontSize="10" 
                                Grid.Column="1" 
                                Grid.Row="4" 
                                VerticalAlignment="Center" 
                                HorizontalAlignment="Left"/>
-            <TextBlock Text="Цикл (6)" 
+
+
+                <Canvas Grid.Row="5">
+
+                    <Polygon Fill="Black" 
+                                 Points="" 
+                                />
+
+                </Canvas>
+
+                <TextBlock Text="Цикл (6) for" 
                                FontSize="10" 
                                Grid.Column="1" 
                                Grid.Row="5" 
                                VerticalAlignment="Center" 
                                HorizontalAlignment="Left"/>
 
-            <Canvas Grid.Row="6" 
+                <Canvas Grid.Row="6">
+
+                    <Polygon Fill="Black" 
+                                 Points="" 
+                                />
+
+                </Canvas>
+
+                <TextBlock Text="Цикл (7) do while, while" 
+                               FontSize="10" 
+                               Grid.Column="1" 
+                               Grid.Row="6" 
+                               VerticalAlignment="Center" 
+                               HorizontalAlignment="Left"/>
+
+                <Canvas Grid.Row="7" 
                     Margin="40 0 0 0"
                     Name="linkBlock"  
                     MouseMove="linkBlock_MouseMove">
-                <Ellipse Fill="#5761A8"
+                    <Ellipse Fill="#5761A8"
                          Width="75" 
                          Height="75"/>
-                <Label FontSize="12" 
+                    <Label FontSize="12" 
                                Foreground="White" 
-                               Canvas.Left="13"
+                               Canvas.Left="15"
                                Canvas.Top="25">
-                    <TextBlock Text="Ссылка" 
+                        <TextBlock Text="Ссылка" 
                                TextWrapping="Wrap"/>
-                </Label>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="35 -3 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="-3 35 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="35 72 0 0"/>
-                <Ellipse Height="6" Width="6" Fill="Black" Margin="72 35 0 0"/>
-            </Canvas>
+                    </Label>
+                </Canvas>
 
             <TextBlock Text="Ссылка (7)" 
                                FontSize="10" 
                                Grid.Column="1" 
-                               Grid.Row="6" 
+                               Grid.Row="7" 
                                VerticalAlignment="Center" 
                                HorizontalAlignment="Left"/>
 
