--- a/FlowchartEditingWindow.xaml
+++ b/FlowchartEditingWindow.xaml
@@ -3,94 +3,96 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:local="clr-namespace:Flowchart_Editor"
         mc:Ignorable="d"
-        Title="Flowchart Editor" Height="450" Width="800">
-    <Grid Background="White">
+        Title="Flowchart Editor" Height="720" Width="1280">
+        <Grid Background="White">
 
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="75"/>
-                <RowDefinition Height="75"/>
-                <RowDefinition Height="75"/>
-                <RowDefinition Height="75"/>
-                <RowDefinition Height="75"/>
-                <RowDefinition Height="75"/>
-                <RowDefinition Height="75"/>
-                <RowDefinition Height="75"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="75"/>
+                    <RowDefinition Height="75"/>
+                    <RowDefinition Height="75"/>
+                    <RowDefinition Height="75"/>
+                    <RowDefinition Height="75"/>
+                    <RowDefinition Height="75"/>
+                    <RowDefinition Height="75"/>
+                    <RowDefinition Height="75"/>
+                    <RowDefinition Height="75"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
 
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="150"/>
-                <ColumnDefinition Width="150"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            
-            <Canvas Background="White" 
-                AllowDrop="True" 
-                DragOver="destination_DragOver" 
-                DragLeave="destination_DragLeave" 
-                Drop="destination_Drop" 
-                Name="destination" 
-                Grid.Column="2"
-                Grid.RowSpan="9"/>
-            
-            <Canvas Width="140" 
-                    Height="60"
-                    Background="#FF52C0AA"
-                    MouseMove="actionBlock_MouseMove" 
-                    Name="actionBlock">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="150"/>
+                    <ColumnDefinition Width="150"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Canvas Background="White" 
+                        AllowDrop="True" 
+                        DragOver="destination_DragOver" 
+                        DragLeave="destination_DragLeave" 
+                        Drop="destination_Drop" 
+                        Name="destination" 
+                        Grid.Column="2"
+                        Grid.RowSpan="9"/>
+
+                <Canvas Width="140" 
+                        Height="60"
+                        Background="#FF52C0AA"
+                        MouseMove="actionBlock_MouseMove" 
+                        Name="actionBlock">
                     <Label FontSize="12" 
                            Foreground="White" 
                            Canvas.Left="40" 
                            Canvas.Top="17"
-                           Width="100">
+                           Width="100" >
                         <TextBlock Text="Действие"
-                               TextWrapping="Wrap"/>
+                                   TextWrapping="Wrap"/>
                     </Label>
                 </Canvas>
 
                 <TextBlock Text="Блок (1)" 
-                       FontSize="10" 
-                       VerticalAlignment="Center" 
-                       HorizontalAlignment="Left"
-                       Grid.Column="1" />
+                           FontSize="10" 
+                           VerticalAlignment="Center" 
+                           HorizontalAlignment="Left"
+                           Grid.Column="1"/>
 
-                <Canvas Name="conditionBlock" MouseMove="conditionBlock_MouseMove" Grid.Row="1">
-
-                    <Polygon Fill="#FF60B2D3" 
-                                 Points="55 120.4 120 90 190 120.4" 
-                                 Grid.Row="1" 
-                                 Canvas.Top="-85" 
-                                 Canvas.Left="-50"/>
+                <Canvas Name="conditionBlock" 
+                        MouseMove="conditionBlock_MouseMove" 
+                        Grid.Row="1">
 
                     <Polygon Fill="#FF60B2D3" 
-                                 Points="190 120 55 120 120 150" 
-                                 Grid.Row="1" 
-                                 Canvas.Top="-85" 
-                                 Canvas.Left="-50"/>
+                             Points="55 120.4 120 90 190 120.4" 
+                             Grid.Row="1" 
+                             Canvas.Top="-85" 
+                             Canvas.Left="-50"/>
 
-                    <Label   FontSize="12" 
-                                 Foreground="White" 
-                                 Canvas.Left="43" 
-                                 Canvas.Top="22"
-                                 Width="100">
-                        <TextBlock Text="Условие" TextWrapping="Wrap"/>
+                    <Polygon Fill="#FF60B2D3" 
+                             Points="190 120 55 120 120 150" 
+                             Grid.Row="1" 
+                             Canvas.Top="-85" 
+                             Canvas.Left="-50"/>
+
+                    <Label FontSize="12" 
+                           Foreground="White" 
+                           Canvas.Left="43" 
+                           Canvas.Top="22"
+                           Width="100">
+                        <TextBlock Text="Условие" 
+                                   TextWrapping="Wrap"/>
                     </Label>
                 </Canvas>
 
                 <TextBlock Text="Условие (2)" 
-                               FontSize="10" 
-                               VerticalAlignment="Center" 
-                               HorizontalAlignment="Left"
-                               Grid.Column="1" 
-                               Grid.Row="1"/>
+                           FontSize="10" 
+                           VerticalAlignment="Center" 
+                           HorizontalAlignment="Left"
+                           Grid.Column="1" 
+                           Grid.Row="1"/>
 
                 <Canvas Name="startEndBlock"  
-                            MouseMove="startEndBlock_MouseMove"  
-                            Grid.Row="2">
+                        MouseMove="startEndBlock_MouseMove"  
+                        Grid.Row="2">
 
                     <Rectangle Width="140" 
                                Height="60" 
@@ -101,138 +103,154 @@
                                Canvas.Top="10">
                     </Rectangle>
                     <Label FontSize="12" 
-                               Foreground="White" 
-                               Canvas.Left="30" 
-                               Canvas.Top="28">
-                        <TextBlock Text="Начало/Конец" TextWrapping="Wrap"/>
+                           Foreground="White" 
+                           Canvas.Left="30" 
+                           Canvas.Top="28">
+                        <TextBlock Text="Начало/Конец" 
+                                   TextWrapping="Wrap"/>
                     </Label>
                 </Canvas>
 
                 <TextBlock Text="Начало / Конец (3)" 
-                               FontSize="10" 
-                               Grid.Column="1" 
-                               Grid.Row="2" 
-                               VerticalAlignment="Center" 
-                               HorizontalAlignment="Left"/>
+                           FontSize="10" 
+                           Grid.Column="1" 
+                           Grid.Row="2" 
+                           VerticalAlignment="Center" 
+                           HorizontalAlignment="Left"/>
 
                 <Canvas Name="inputOutputBlock"  
-                            MouseMove="inputOutputBlock_MouseMove"  
-                            Grid.Row="3">
+                        MouseMove="inputOutputBlock_MouseMove"  
+                        Grid.Row="3">
                     <Rectangle Width="102" 
-                                   Height="30" 
-                                   Fill="#FF05273C" 
-                                   Canvas.Top="11" 
-                                   Canvas.Left="5">
+                               Height="30" 
+                               Fill="#FF05273C" 
+                               Canvas.Top="11" 
+                               Canvas.Left="5">
                         <Rectangle.RenderTransform>
                             <MatrixTransform Matrix="1 0 1 2 1 -3"/>
                         </Rectangle.RenderTransform>
                     </Rectangle>
 
                     <Label FontSize="12" 
-                               Foreground="White" 
-                               Canvas.Left="37" 
-                               Canvas.Top="25">
-                        <TextBlock Text="Ввод/Вывод" TextWrapping="Wrap"/>
+                           Foreground="White" 
+                           Canvas.Left="37" 
+                           Canvas.Top="25">
+                        <TextBlock Text="Ввод/Вывод"
+                                   TextWrapping="Wrap"/>
                     </Label>
                 </Canvas>
 
                 <TextBlock Text="Ввод / Вывод (4)" 
-                               FontSize="10" 
-                               Grid.Column="1" 
-                               Grid.Row="3" 
-                               VerticalAlignment="Center" 
-                               HorizontalAlignment="Left"/>
+                           FontSize="10" 
+                           Grid.Column="1" 
+                           Grid.Row="3" 
+                           VerticalAlignment="Center" 
+                           HorizontalAlignment="Left"/>
 
                 <Canvas Width="140" 
-                            Height="60"
-                            Background="#FFBA64C8"
-                            Grid.Row="4" 
-                            Name="subroutineBlock"  
-                            MouseMove="subroutineBlock_MouseMove">
+                        Height="60"
+                        Background="#FFBA64C8"
+                        Grid.Row="4" 
+                        Name="subroutineBlock"  
+                        MouseMove="subroutineBlock_MouseMove">
                     <Border BorderBrush="Black" 
-                                Height="60" 
-                                Width="140" 
-                                BorderThickness="1" 
-                                CornerRadius="1">
+                            Height="60" 
+                            Width="140" 
+                            BorderThickness="1" 
+                            CornerRadius="1">
                         <Canvas>
                             <Border BorderBrush="Black" 
-                                        Height="60" 
-                                        Width="100" 
-                                        BorderThickness="1" 
-                                        CornerRadius="1" 
-                                        Canvas.Left="20" 
-                                        Canvas.Top="-1">
+                                    Height="60" 
+                                    Width="100" 
+                                    BorderThickness="1" 
+                                    CornerRadius="1" 
+                                    Canvas.Left="20" 
+                                    Canvas.Top="-1">
                             </Border>
                         </Canvas>
                     </Border>
                     <Label FontSize="12" 
-                               Foreground="White" 
-                               Canvas.Left="28"
-                               Canvas.Top="17">
-                        <TextBlock Text="Подпрограмма" TextWrapping="Wrap"/>
+                           Foreground="White" 
+                           Canvas.Left="24"
+                           Canvas.Top="17">
+                        <TextBlock Text="Подпрограмма" 
+                                   TextWrapping="Wrap"/>
                     </Label>
                 </Canvas>
 
                 <TextBlock Text="Подпрограмма (5)" 
-                               FontSize="10" 
-                               Grid.Column="1" 
-                               Grid.Row="4" 
-                               VerticalAlignment="Center" 
-                               HorizontalAlignment="Left"/>
+                           FontSize="10" 
+                           Grid.Column="1" 
+                           Grid.Row="4" 
+                           VerticalAlignment="Center" 
+                           HorizontalAlignment="Left"/>
 
+            <Canvas Grid.Row="5"
+                    Name="cycleBlockFor">
 
-                <Canvas Grid.Row="5">
-
-                    <Polygon Fill="Black" 
-                                 Points="" 
-                                />
+                <Polygon Fill="#FFC618" 
+                         Points="20 10 10 20 10 60 20 70 140 70 150 60 150 20 140 10" 
+                         Margin="-5"/>
 
                 </Canvas>
 
                 <TextBlock Text="Цикл (6) for" 
-                               FontSize="10" 
-                               Grid.Column="1" 
-                               Grid.Row="5" 
-                               VerticalAlignment="Center" 
-                               HorizontalAlignment="Left"/>
+                           FontSize="10" 
+                           Grid.Column="1" 
+                           Grid.Row="5" 
+                           VerticalAlignment="Center" 
+                           HorizontalAlignment="Left"/>
 
                 <Canvas Grid.Row="6">
 
-                    <Polygon Fill="Black" 
-                                 Points="" 
-                                />
+                <Polygon Fill="#CCCCFF" 
+                         Points="10 70 10 20 20 10 140 10 150 20 150 70" 
+                         Margin="-5"/>
 
                 </Canvas>
 
-                <TextBlock Text="Цикл (7) do while, while" 
-                               FontSize="10" 
-                               Grid.Column="1" 
-                               Grid.Row="6" 
-                               VerticalAlignment="Center" 
-                               HorizontalAlignment="Left"/>
+                <TextBlock Text="Цикл (7) do while, while (Начало)" 
+                           FontSize="10" 
+                           Grid.Column="1" 
+                           Grid.Row="6" 
+                           VerticalAlignment="Center" 
+                           HorizontalAlignment="Left"/>
 
-                <Canvas Grid.Row="7" 
-                    Margin="40 0 0 0"
-                    Name="linkBlock"  
-                    MouseMove="linkBlock_MouseMove">
+                <Canvas Grid.Row="7">
+                    <Polygon Fill="#CCCCFF" 
+                             Points="10 10 10 60 20 70 140 70 150 60 150 10" 
+                             Margin="-5 0 0 0"/>
+                </Canvas>
+
+                <TextBlock Text="Цикл (8) do while, while (Конец)" 
+                           FontSize="10" 
+                           Grid.Column="1" 
+                           Grid.Row="7" 
+                           VerticalAlignment="Center" 
+                           HorizontalAlignment="Left"/>
+
+                <Canvas Grid.Row="8" 
+                        Margin="40 0 0 0"
+                        Name="linkBlock"  
+                        MouseMove="linkBlock_MouseMove">
                     <Ellipse Fill="#5761A8"
-                         Width="75" 
-                         Height="75"/>
+                             Width="75" 
+                             Height="75"/>
                     <Label FontSize="12" 
-                               Foreground="White" 
-                               Canvas.Left="15"
-                               Canvas.Top="25">
+                           Foreground="White" 
+                           Canvas.Left="13"
+                           Canvas.Top="25">
                         <TextBlock Text="Ссылка" 
-                               TextWrapping="Wrap"/>
+                                   TextWrapping="Wrap"/>
                     </Label>
                 </Canvas>
 
-            <TextBlock Text="Ссылка (7)" 
-                               FontSize="10" 
-                               Grid.Column="1" 
-                               Grid.Row="7" 
-                               VerticalAlignment="Center" 
-                               HorizontalAlignment="Left"/>
+                <TextBlock Text="Ссылка (9)" 
+                           FontSize="10" 
+                           Grid.Column="1" 
+                           Grid.Row="8" 
+                           VerticalAlignment="Center" 
+                           HorizontalAlignment="Left"/>
 
         </Grid>
     </Grid>
